// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders NavigationPills correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      data-radium={true}
      onKeyDown={[Function]}
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        aria-label="back"
        className="rmq-4534e6b"
        data-radium={true}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#43B02A",
            "border": "0",
            "borderRadius": "50%",
            "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.26), 0 1px 4px 0 rgba(0, 0, 0, 0.16)",
            "color": "#FFFFFF",
            "display": "none",
            "height": "48px",
            "left": 8,
            "lineHeight": "1",
            "position": "absolute",
            "textAlign": "center",
            "top": "5px",
            "transition": "background-color 150ms ease-in-out",
            "width": "48px",
            "zIndex": 100,
          }
        }
      >
        <i
          aria-hidden={true}
          data-radium={true}
          onClick={undefined}
          style={
            Object {
              "fontFamily": "ic-icons",
              "fontSize": "20px",
              "fontSmoothing": "antialiased",
              "fontStyle": "normal",
              "fontVariant": "normal",
              "fontWeight": "normal",
              "lineHeight": "1",
              "osxFontSmoothing": "grayscale",
              "position": "relative",
              "speak": "none",
              "textTransform": "none",
            }
          }
        >
          
        </i>
      </button>
      <div
        className="rmq-16b35912"
        data-radium={true}
        style={
          Object {
            "position": "relative",
            "transform": "translate3d(0px, 0, 0)",
            "transition": "transform 150ms ease-in-out",
            "whiteSpace": "nowrap",
          }
        }
      >
        <div
          data-radium={true}
          style={Object {}}
        >
          <div
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "boxSizing": "border-box",
                "display": "inline-block",
                "height": "56px",
                "minWidth": "100%",
                "padding": "8px 8px 8px 24px",
              }
            }
          >
            <label
              data-radium={true}
              style={
                Object {
                  "marginRight": "10px",
                }
              }
            >
              Filter by
            </label>
            <ul
              data-radium={true}
              style={
                Object {
                  "display": "inline-block",
                  "margin": "0",
                }
              }
            >
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms1
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms2
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms3
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                />
              </li>
            </ul>
          </div>
        </div>
      </div>
      <button
        aria-label="next"
        className="rmq-4534e6b"
        data-radium={true}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#43B02A",
            "border": "0",
            "borderRadius": "50%",
            "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.26), 0 1px 4px 0 rgba(0, 0, 0, 0.16)",
            "color": "#FFFFFF",
            "display": "none",
            "height": "48px",
            "lineHeight": "1",
            "position": "absolute",
            "right": 8,
            "textAlign": "center",
            "top": "5px",
            "transition": "background-color 150ms ease-in-out",
            "width": "48px",
            "zIndex": 100,
          }
        }
      >
        <i
          aria-hidden={true}
          data-radium={true}
          onClick={undefined}
          style={
            Object {
              "fontFamily": "ic-icons",
              "fontSize": "20px",
              "fontSmoothing": "antialiased",
              "fontStyle": "normal",
              "fontVariant": "normal",
              "fontWeight": "normal",
              "lineHeight": "1",
              "osxFontSmoothing": "grayscale",
              "position": "relative",
              "speak": "none",
              "textTransform": "none",
            }
          }
        >
          
        </i>
      </button>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-16b35912{left: inherit !important;
overflow-x: scroll !important;
display: block !important;
-ms-overflow-style: none !important;
overflow: -moz-scrollbars-none !important;
webkit-overflow-scrolling: touch !important;}}
@media (max-width: 767px){ .rmq-4534e6b{display: none !important;}}",
      }
    }
  />
</div>
`;

exports[`renders NavigationPills wihtout label correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      data-radium={true}
      onKeyDown={[Function]}
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        aria-label="back"
        className="rmq-4534e6b"
        data-radium={true}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#43B02A",
            "border": "0",
            "borderRadius": "50%",
            "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.26), 0 1px 4px 0 rgba(0, 0, 0, 0.16)",
            "color": "#FFFFFF",
            "display": "none",
            "height": "48px",
            "left": 8,
            "lineHeight": "1",
            "position": "absolute",
            "textAlign": "center",
            "top": "5px",
            "transition": "background-color 150ms ease-in-out",
            "width": "48px",
            "zIndex": 100,
          }
        }
      >
        <i
          aria-hidden={true}
          data-radium={true}
          onClick={undefined}
          style={
            Object {
              "fontFamily": "ic-icons",
              "fontSize": "20px",
              "fontSmoothing": "antialiased",
              "fontStyle": "normal",
              "fontVariant": "normal",
              "fontWeight": "normal",
              "lineHeight": "1",
              "osxFontSmoothing": "grayscale",
              "position": "relative",
              "speak": "none",
              "textTransform": "none",
            }
          }
        >
          
        </i>
      </button>
      <div
        className="rmq-16b35912"
        data-radium={true}
        style={
          Object {
            "position": "relative",
            "transform": "translate3d(0px, 0, 0)",
            "transition": "transform 150ms ease-in-out",
            "whiteSpace": "nowrap",
          }
        }
      >
        <div
          data-radium={true}
          style={Object {}}
        >
          <div
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "boxSizing": "border-box",
                "display": "inline-block",
                "height": "56px",
                "minWidth": "100%",
                "padding": "8px 8px 8px 24px",
              }
            }
          >
            <ul
              data-radium={true}
              style={
                Object {
                  "display": "inline-block",
                  "margin": "0",
                }
              }
            >
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms1
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms2
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms3
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                />
              </li>
            </ul>
          </div>
        </div>
      </div>
      <button
        aria-label="next"
        className="rmq-4534e6b"
        data-radium={true}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#43B02A",
            "border": "0",
            "borderRadius": "50%",
            "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.26), 0 1px 4px 0 rgba(0, 0, 0, 0.16)",
            "color": "#FFFFFF",
            "display": "none",
            "height": "48px",
            "lineHeight": "1",
            "position": "absolute",
            "right": 8,
            "textAlign": "center",
            "top": "5px",
            "transition": "background-color 150ms ease-in-out",
            "width": "48px",
            "zIndex": 100,
          }
        }
      >
        <i
          aria-hidden={true}
          data-radium={true}
          onClick={undefined}
          style={
            Object {
              "fontFamily": "ic-icons",
              "fontSize": "20px",
              "fontSmoothing": "antialiased",
              "fontStyle": "normal",
              "fontVariant": "normal",
              "fontWeight": "normal",
              "lineHeight": "1",
              "osxFontSmoothing": "grayscale",
              "position": "relative",
              "speak": "none",
              "textTransform": "none",
            }
          }
        >
          
        </i>
      </button>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-16b35912{left: inherit !important;
overflow-x: scroll !important;
display: block !important;
-ms-overflow-style: none !important;
overflow: -moz-scrollbars-none !important;
webkit-overflow-scrolling: touch !important;}}
@media (max-width: 767px){ .rmq-4534e6b{display: none !important;}}",
      }
    }
  />
</div>
`;

exports[`renders NavigationPills with each pill's elementAttributes correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      data-radium={true}
      onKeyDown={[Function]}
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        aria-label="back"
        className="rmq-4534e6b"
        data-radium={true}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#43B02A",
            "border": "0",
            "borderRadius": "50%",
            "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.26), 0 1px 4px 0 rgba(0, 0, 0, 0.16)",
            "color": "#FFFFFF",
            "display": "none",
            "height": "48px",
            "left": 8,
            "lineHeight": "1",
            "position": "absolute",
            "textAlign": "center",
            "top": "5px",
            "transition": "background-color 150ms ease-in-out",
            "width": "48px",
            "zIndex": 100,
          }
        }
      >
        <i
          aria-hidden={true}
          data-radium={true}
          onClick={undefined}
          style={
            Object {
              "fontFamily": "ic-icons",
              "fontSize": "20px",
              "fontSmoothing": "antialiased",
              "fontStyle": "normal",
              "fontVariant": "normal",
              "fontWeight": "normal",
              "lineHeight": "1",
              "osxFontSmoothing": "grayscale",
              "position": "relative",
              "speak": "none",
              "textTransform": "none",
            }
          }
        >
          
        </i>
      </button>
      <div
        className="rmq-16b35912"
        data-radium={true}
        style={
          Object {
            "position": "relative",
            "transform": "translate3d(0px, 0, 0)",
            "transition": "transform 150ms ease-in-out",
            "whiteSpace": "nowrap",
          }
        }
      >
        <div
          data-radium={true}
          style={Object {}}
        >
          <div
            ariaLabel="this is an aria label"
            data-radium={true}
            role="tabs"
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "boxSizing": "border-box",
                "display": "inline-block",
                "height": "56px",
                "minWidth": "100%",
                "padding": "8px 8px 8px 24px",
              }
            }
          >
            <label
              data-radium={true}
              style={
                Object {
                  "marginRight": "10px",
                }
              }
            >
              Filter by
            </label>
            <ul
              data-radium={true}
              style={
                Object {
                  "display": "inline-block",
                  "margin": "0",
                }
              }
            >
              <li
                aria-label="doms"
                data-radium={true}
                role="tab"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms
                </a>
              </li>
              <li
                aria-label="doms1"
                data-radium={true}
                role="tab"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms1
                </a>
              </li>
              <li
                aria-label="doms2"
                data-radium={true}
                role="tab"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms2
                </a>
              </li>
              <li
                aria-label="doms3"
                data-radium={true}
                role="tab"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms3
                </a>
              </li>
              <li
                aria-label="four"
                data-radium={true}
                role="tab"
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                />
              </li>
            </ul>
          </div>
        </div>
      </div>
      <button
        aria-label="next"
        className="rmq-4534e6b"
        data-radium={true}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#43B02A",
            "border": "0",
            "borderRadius": "50%",
            "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.26), 0 1px 4px 0 rgba(0, 0, 0, 0.16)",
            "color": "#FFFFFF",
            "display": "none",
            "height": "48px",
            "lineHeight": "1",
            "position": "absolute",
            "right": 8,
            "textAlign": "center",
            "top": "5px",
            "transition": "background-color 150ms ease-in-out",
            "width": "48px",
            "zIndex": 100,
          }
        }
      >
        <i
          aria-hidden={true}
          data-radium={true}
          onClick={undefined}
          style={
            Object {
              "fontFamily": "ic-icons",
              "fontSize": "20px",
              "fontSmoothing": "antialiased",
              "fontStyle": "normal",
              "fontVariant": "normal",
              "fontWeight": "normal",
              "lineHeight": "1",
              "osxFontSmoothing": "grayscale",
              "position": "relative",
              "speak": "none",
              "textTransform": "none",
            }
          }
        >
          
        </i>
      </button>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-16b35912{left: inherit !important;
overflow-x: scroll !important;
display: block !important;
-ms-overflow-style: none !important;
overflow: -moz-scrollbars-none !important;
webkit-overflow-scrolling: touch !important;}}
@media (max-width: 767px){ .rmq-4534e6b{display: none !important;}}",
      }
    }
  />
</div>
`;

exports[`renders NavigationPills with elementAttributes correctly 1`] = `
<div
  data-radium={true}
>
  <div>
    <div
      data-radium={true}
      onKeyDown={[Function]}
      style={
        Object {
          "overflow": "hidden",
          "position": "relative",
        }
      }
    >
      <button
        aria-label="back"
        className="rmq-4534e6b"
        data-radium={true}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#43B02A",
            "border": "0",
            "borderRadius": "50%",
            "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.26), 0 1px 4px 0 rgba(0, 0, 0, 0.16)",
            "color": "#FFFFFF",
            "display": "none",
            "height": "48px",
            "left": 8,
            "lineHeight": "1",
            "position": "absolute",
            "textAlign": "center",
            "top": "5px",
            "transition": "background-color 150ms ease-in-out",
            "width": "48px",
            "zIndex": 100,
          }
        }
      >
        <i
          aria-hidden={true}
          data-radium={true}
          onClick={undefined}
          style={
            Object {
              "fontFamily": "ic-icons",
              "fontSize": "20px",
              "fontSmoothing": "antialiased",
              "fontStyle": "normal",
              "fontVariant": "normal",
              "fontWeight": "normal",
              "lineHeight": "1",
              "osxFontSmoothing": "grayscale",
              "position": "relative",
              "speak": "none",
              "textTransform": "none",
            }
          }
        >
          
        </i>
      </button>
      <div
        className="rmq-16b35912"
        data-radium={true}
        style={
          Object {
            "position": "relative",
            "transform": "translate3d(0px, 0, 0)",
            "transition": "transform 150ms ease-in-out",
            "whiteSpace": "nowrap",
          }
        }
      >
        <div
          data-radium={true}
          style={Object {}}
        >
          <div
            ariaLabel="this is an aria label"
            data-radium={true}
            role="tabs"
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "boxSizing": "border-box",
                "display": "inline-block",
                "height": "56px",
                "minWidth": "100%",
                "padding": "8px 8px 8px 24px",
              }
            }
          >
            <label
              data-radium={true}
              style={
                Object {
                  "marginRight": "10px",
                }
              }
            >
              Filter by
            </label>
            <ul
              data-radium={true}
              style={
                Object {
                  "display": "inline-block",
                  "margin": "0",
                }
              }
            >
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms1
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms2
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                >
                  doms3
                </a>
              </li>
              <li
                data-radium={true}
                style={
                  Object {
                    "display": "inline-block",
                  }
                }
              >
                <a
                  data-bypass={true}
                  data-radium={true}
                  href="#"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={
                    Object {
                      "backgroundColor": "#F7F7F7",
                      "borderRadius": "24px",
                      "color": "#43B02A",
                      "display": "block",
                      "fontSize": "14px",
                      "lineHeight": "1.2",
                      "margin": "0 4px",
                      "padding": "12px 16px",
                      "transition": "background-color 150ms ease-in-out",
                    }
                  }
                />
              </li>
            </ul>
          </div>
        </div>
      </div>
      <button
        aria-label="next"
        className="rmq-4534e6b"
        data-radium={true}
        disabled={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "backgroundColor": "#43B02A",
            "border": "0",
            "borderRadius": "50%",
            "boxShadow": "0 1px 2px 0 rgba(0, 0, 0, 0.26), 0 1px 4px 0 rgba(0, 0, 0, 0.16)",
            "color": "#FFFFFF",
            "display": "none",
            "height": "48px",
            "lineHeight": "1",
            "position": "absolute",
            "right": 8,
            "textAlign": "center",
            "top": "5px",
            "transition": "background-color 150ms ease-in-out",
            "width": "48px",
            "zIndex": 100,
          }
        }
      >
        <i
          aria-hidden={true}
          data-radium={true}
          onClick={undefined}
          style={
            Object {
              "fontFamily": "ic-icons",
              "fontSize": "20px",
              "fontSmoothing": "antialiased",
              "fontStyle": "normal",
              "fontVariant": "normal",
              "fontWeight": "normal",
              "lineHeight": "1",
              "osxFontSmoothing": "grayscale",
              "position": "relative",
              "speak": "none",
              "textTransform": "none",
            }
          }
        >
          
        </i>
      </button>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (max-width: 767px){ .rmq-16b35912{left: inherit !important;
overflow-x: scroll !important;
display: block !important;
-ms-overflow-style: none !important;
overflow: -moz-scrollbars-none !important;
webkit-overflow-scrolling: touch !important;}}
@media (max-width: 767px){ .rmq-4534e6b{display: none !important;}}",
      }
    }
  />
</div>
`;

exports[`renders NavigationPills without pills correctly 1`] = `
<div
  data-radium={true}
>
  <div />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
